feat: implement selectable PDF download via headless Chrome print-to-pdf pipeline with perfect styling and layout matching